Falha na geracao de mapa
- Adicionado funções para:
 * Limpeza de buffer de entrada
 * Loop de entrada
 * Limpar tela
 * Tutorial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "editor.formatOnSave": false,
     "files.associations": {
         "xiosbase": "cpp",
-        "xlocale": "cpp"
+        "xlocale": "cpp",
+        "ostream": "cpp",
+        "iostream": "cpp"
     }
 }
